# quadruped-cpp

./: CMakeLists.txt  Dockerfile  Leg_Control.txt  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-quadruped  bazel-testlogs  components.cpp  gait.h  main  main.cpp  optimization.cpp  optimization.h  run_dev.sh
include/: optimization.h
src/: BUILD.bazel  components.cpp  components.h  gait.cpp  gait.h  gait_params.cpp  gait_sequence.cpp  linearize_dynamics.cpp  main.cpp  main_old.cpp  memory_allocation.cpp  robot_params.cpp
