package(default_visibility = ["//visibility:public"])

# Use @ when targeting external deps (i.e. github), (Depends on what you named these deps)
cc_binary(
    name = "main",
    srcs = [
        "components.cpp",
        "components.h",
        "gait.cpp",
        "gait.h",
        "optimization.cpp",
        "optimization.h",
        "main.cpp",
    ],
    deps = ["@eigen//:eigen"],
    visibility = ["//visibility:public"],
)